Update openAPI for /login, fix response for /summarize
