# server/openapi.yaml
@@ -2,7 +2,9 @@ openapi: '3.0.0'
 info:
   title: TL;DR websites
   version: '1.0.0'
-#TODO: OAuth and security
+# WIP: OAuth and security
+# TODO: Finalize information returned by /user endpoints
+# TODO: Examples
 # USAGE: To regenerate boilerplate code, make sure openapi-generator-cli is installed, then from the ./server directory, 
 #        run  $openapi-generator-cli generate -g nodejs-express-server -o . -i .\openapi.yaml
 #        Note that existing files WILL be overwritten; you will need to manually revert changes to those.
@@ -29,7 +31,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/User'
         default:
-          $ref: '#/components/responses/UnexpectedError'
+          $ref: '#/components/responses/Error'
   /user/summaries:
     get:
       tags:
@@ -45,7 +47,7 @@ paths:
                 items:
                   $ref: '#/components/schemas/Summary'
         default:
-          $ref: '#/components/responses/UnexpectedError'
+          $ref: '#/components/responses/Error'
   /user/summaries/{id}:
     get:
       tags:
@@ -63,24 +65,30 @@ paths:
         '200':
           $ref: '#/components/responses/Summary'
         default:
-          $ref: '#/components/responses/UnexpectedError'
+          $ref: '#/components/responses/Error'
   /login:
     get:
       tags:
       - auth
-      summary: Log in user.
-      description: Called after Google Sign In. Given Google's Auth response, set a JWT to establish user session.
+      summary: Log in user. New users will be signed up then logged in.
+      description: Given `id_token` from Google Sign In, verify token and authenticate user. If authentication is successful, set a JWT to establish user session.
       requestBody:
         description: User ID to retreive information for
         required: true
         content:
-          'text':
+          application/json:
             schema:
-              type: string
-              format: uuid
+              $ref: '#/components/schemas/LoginRequest'
       responses:
+        '303':
+          description: Redirect to home page.
+          headers:
+            Location:
+              schema:
+                description: Redirect URL
+                type: string
         default:
-          $ref: '#/components/responses/UnexpectedError'
+          $ref: '#/components/responses/Error'
   /logout:
     get:
       tags:
@@ -90,7 +98,7 @@ paths:
         '204':
           description: Invalidate session cookie.
         default:
-          $ref: '#/components/responses/UnexpectedError'
+          $ref: '#/components/responses/Error'
   /signup:
     post:
       tags:
@@ -98,7 +106,8 @@ paths:
       summary: Sign up new user given credentials.
       responses:
         default:
-          $ref: '#/components/responses/UnexpectedError'
+          $ref: '#/components/responses/Error'
+      deprecated: true
   /summarize:
     post:
       tags:
@@ -123,8 +132,8 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/Summary'
-    UnexpectedError:
-      description: Unexpected error
+    Error:
+      description: Wrapper for generic error response that displays the error code and error message.
       content:
         application/json:
           schema:
@@ -142,25 +151,30 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Summary'
+    LoginRequest:
+      type: object
+      required:
+      - id_token
+      properties:
+        id_token:
+          description: id_token, as returned by `googleUser.getAuthResponse().id_token`
+          type: string
     SummarizeRequest:
+      description: Request can contain either plaintext or a webpage URL, but not both.
       oneOf:
-        - $ref: '#/components/schemas/SummarizeByText'
-        - $ref: '#/components/schemas/SummarizeByURL'
-    SummarizeByText:
-      type: object
-      required:
-        - plaintext
-      properties:
-        plaintext:
-          type: string
-    SummarizeByURL:
-      type: object
-      required:
-        - url
-      properties:
-        url:
-          type: string
-          format: uri
+        - type: object
+          required:
+            - url
+          properties:
+            url:
+              type: string
+              format: uri
+        - type: object
+          required:
+            - plaintext
+          properties:
+            plaintext:
+              type: string
     Summary:
       type: object
       required:
